--- a/app/video_no_play.html
+++ b/app/video_no_play.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
     <head>        
     </head>
-    <body width="100%" height="100%" style="background:black;">
+    <body width="100%" height="100%" style="background:white;">
         <video width="100%" height="100%" src="https://clinicamaza.com/video/1.mp4" 
                style="position:absolute; top:0px; left:0px; width:100%;height:100%;"
                >
